--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "install": "^0.13.0",
     "mysql2": "^3.3.3",
-    "sequelize": "^5.22.5"
+    "sequelize": "^6.1.0"
   }
 }
