--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "mvc-tech-blog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0",
@@ -10,5 +14,22 @@
     "install": "^0.13.0",
     "mysql2": "^3.3.3",
     "sequelize": "^6.1.0"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lbuck909/MVC-Tech-Blog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lbuck909/MVC-Tech-Blog/issues"
+  },
+  "homepage": "https://github.com/lbuck909/MVC-Tech-Blog#readme"
 }
