--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "express-session": "^1.17.3",
     "install": "^0.13.0",
     "mysql2": "^3.3.3",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
   "repository": {
